Fix waves and missing background colors

--- a/assets/css/core/headers/_header.scss
+++ b/assets/css/core/headers/_header.scss
@@ -3,4 +3,9 @@
 //
 .header {
   position: relative;
+
+  .waves {
+    position: absolute;
+    top: -70px;
+  }
 }
